# arm_control

./: CMakeLists.txt  README.md  ik.py  ik2.py  jacobian.txt  package.xml
config/: 2arms.rviz  arm_controllers.yaml  arm_params.yaml  driver.yaml  joint_offsets.yaml
description/: arm.ros2_control.xacro  arm_hardware.urdf.xacro  arm_simulation.urdf.xacro  base_station.urdf.xacro  hardware_launch.urdf.xacro  hardware_macros.xacro  macros.xacro  robot2.urdf  robotic_arm.urdf.xacro  robotic_arm_1.urdf  robotic_arm_2.urdf  robotic_arm_3.urdf  robotic_arm_4.urdf  your_robot.sdf  yurs_base_station.urdf.xacro
description/meshes/: ARM-A01.STL  ARM-A02.STL  ARM-A03.STL  ARM-A04.STL  ARM-A05.STL  ARM-A06.STL  Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  base_link.STL
description/meshes/yurs/: link1.STL
env-hooks/: 99-arm-control-models.dsv
launch/: arm_hardware.launch.py  arm_simulation.launch.py  base_station.launch.py  rover_arm_hardware.launch.py  simulation_base.launch.py  urdf_test.launch.py
networking/: arm_receiver.py  arm_transmitter.py  base_station_receiver.py  base_station_transmitter.py  rover_receiver.py  rover_transmitter.py
scripts/: IKPSolver.py  PID.py  arm_states_decoder.py  base_station_decoder.py  base_station_encoder.py  kinematics.py  rover_states_decoder.py  rover_states_encoder.py  test.py
worlds/: empty.world
